TEST_PROGRAMS/INVALID/yanis_hattab/invalid4.min
var x : int;
var y : int;


if x then

  x = -012;

else

  y = -00;

endif
